update website a bunch

--- a/blog/10_21_2023_microgui.md
+++ b/blog/10_21_2023_microgui.md
@@ -3,36 +3,51 @@
 [![forthebadge](https://forthebadge.com/images/badges/0-percent-optimized.svg)](https://forthebadge.com)
 [![forthebadge](https://forthebadge.com/images/badges/designed-in-ms-paint.svg)](https://forthebadge.com)
 
-Today marks the day of the first MicroGUI release. It is still a early alpha version tough!
+Today marks the day of the first MicroGUI release. It is still a early alpha
+version tough!
 
 ## What is MicroGUI?
 
-MicroGUI is a desktop extension for [MicroOS](https://github.com/Glowman554/MicroOS). The extension currently is in a very early alpha stage! USE AT YOUR OWN RISK. This extension is proprietary and the source code will not be released, but don't worry the main OS will always stay open source.
+MicroGUI is a desktop extension for
+[MicroOS](https://github.com/Glowman554/MicroOS). The extension currently is in
+a very early alpha stage! USE AT YOUR OWN RISK. This extension is proprietary
+and the source code will not be released, but don't worry the main OS will
+always stay open source.
 
 ## How to use MicroGUI?
 
-To use MicroGUI you will need to configure the MicroOS kernel and install MicroOS onto a disk.
+To use MicroGUI you will need to configure the MicroOS kernel and install
+MicroOS onto a disk.
 
 ### Configuring the kernel
 
-In the root of the MicroOS project type `make config_kernel`. The activate the following options:
+In the root of the MicroOS project type `make config_kernel`. The activate the
+following options:
 
 - `Output->TEXT_MODE_EMULATION`
 - `Output->RAW_FRAMEBUFFER_ACCESS`
 
-It is also highly recommended to activate the `Output->FULL_SCREEN_TERMINAL` option. In future releases this option might even be required.
+It is also highly recommended to activate the `Output->FULL_SCREEN_TERMINAL`
+option. In future releases this option might even be required.
 
 ### Installing MicroOS (using a virtual machine)
 
-First type `make` to compile the OS. Then type `make format_disk_gpt` to format a disk file using fat32 and gpt. After that type `make run` to run MicroOS. Once MicroOS is booted type `terminal autoinstall.msh` in the MicroOS terminal to automatically install to the previously formatted disk. The virtual machine will automatically shut down once the installation is finished.
+First type `make` to compile the OS. Then type `make format_disk_gpt` to format
+a disk file using fat32 and gpt. After that type `make run` to run MicroOS. Once
+MicroOS is booted type `terminal autoinstall.msh` in the MicroOS terminal to
+automatically install to the previously formatted disk. The virtual machine will
+automatically shut down once the installation is finished.
 
 ### Testing MicroOS
 
-Use the command `qemu-system-i386 -hda res/foxos.img` to test if the installation was successful.
+Use the command `qemu-system-i386 -hda res/foxos.img` to test if the
+installation was successful.
 
 ### Installing MicroGUI
 
-First unzip the [`publish.zip`](/downloads/publish.zip) file. You should now have a folder named publish. Now type the following commands to create a disk file containing the install files for MicroGUI:
+First unzip the [`microgui.zip`](/downloads/microgui.zip) file. You should now
+have a folder named publish. Now type the following commands to create a disk
+file containing the install files for MicroGUI:
 
 - `dd if=/dev/zero of=publish.img bs=512 count=93750`
 - `mkfs.vfat publish.img -F32`
@@ -40,13 +55,25 @@ First unzip the [`publish.zip`](/downloads/publish.zip) file. You should now hav
 - `printf publish > /tmp/LABEL`
 - `mcopy -i publish.img /tmp/LABEL ::`
 
-Now use the command `qemu-system-i386 -hda res/foxos.img -hdb publish.img --enable-kvm` to boot MicroOS. Once MicroOS is booted type `publish:/desktop_install.elf` to start the installer. If you first want to check if the kernel is configured right you can run `publish:/syscheck.elf` before installing. The installer will ask a few questions. If you plan to use the terminal you should also install the terminal extension making command output work correctly. To do this type `publish:/desktop_terminal_install.elf`. After the installation is done reboot the virtual machine (Either rerunning the command or using the Reset button qemu provides).
+Now use the command
+`qemu-system-i386 -hda res/foxos.img -hdb publish.img --enable-kvm` to boot
+MicroOS. Once MicroOS is booted type `publish:/desktop_install.elf` to start the
+installer. If you first want to check if the kernel is configured right you can
+run `publish:/syscheck.elf` before installing. The installer will ask a few
+questions. If you plan to use the terminal you should also install the terminal
+extension making command output work correctly. To do this type
+`publish:/desktop_terminal_install.elf`. After the installation is done reboot
+the virtual machine (Either rerunning the command or using the Reset button qemu
+provides).
 
 ## Creating software for MicroGUI
 
 ### Using FireStorm
 
-First make sure you have `flc` installed. You can get it [here](https://github.com/Glowman554/FireStorm). Just clone the repository and run the `install.sh` file. Now unzip the `libs.zip` provided in the `publish` directory. You can do this using `unzip publish/libs.zip`.
+First make sure you have `flc` installed. You can get it
+[here](https://github.com/Glowman554/FireStorm/tree/old). Just clone the
+repository and run the `install.sh` file. Now unzip the `libs.zip` provided in
+the `publish` directory. You can do this using `unzip publish/libs.zip`.
 
 Now create a file named `hello.fl` with the following content:
 
@@ -71,11 +98,16 @@ function spark(int argc, str[] argv) -> int {
 }
 ```
 
-and then use `flc -t bytecode -o hello.flbb -i res/libs/include/ hello.fl` to compile it. Now use `mcopy -i publish.img hello.flbb ::` to copy the compiled file into the image we created previously and boot the virtual machine using the same command as we used before. Now use the explorer to navigate to `publish:/` and run the file by clicking on it.
+and then use `flc -t bytecode -o hello.flbb -i res/libs/include/ hello.fl` to
+compile it. Now use `mcopy -i publish.img hello.flbb ::` to copy the compiled
+file into the image we created previously and boot the virtual machine using the
+same command as we used before. Now use the explorer to navigate to `publish:/`
+and run the file by clicking on it.
 
 #### A more complex example
 
-This is a more complex example implementing a 2 player tic tac toe game. The assets are already a part of the installation.
+This is a more complex example implementing a 2 player tic tac toe game. The
+assets are already a part of the installation.
 
 ```
 $include <std.fl>
@@ -235,4 +267,4 @@ function spark(int argc, str[] argv) -> int {
 
 ### I found a bug or i have a question
 
-You can contact me using Discord or Instagram. I'm always happy to help you! 
+You can contact me using Discord or Instagram. I'm always happy to help you!
